# AgeVerification

./: .env  README.md  install.sh  meson.build  moe.nyarchlinux.ageverification.json
data/: meson.build  moe.nyarchlinux.ageverification.desktop.in  moe.nyarchlinux.ageverification.gschema.xml  moe.nyarchlinux.ageverification.metainfo.xml.in  moe.nyarchlinux.ageverification.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: ageverification.gresource.xml  ageverification.in  assets.py  main.py  meson.build  questions.py  shortcuts-dialog.ui  window.py  window.ui
